[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scenes/HUD.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TitleBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.470588, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -33.5
margin_right = 57.5
margin_bottom = 33.5
text = "Go Shopping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.937
margin_top = 1.0
margin_right = -6.93701
margin_bottom = 36.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToTitleButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.175
margin_top = 40.874
margin_right = -3.1748
margin_bottom = 74.874
text = "Return to titel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -109.5
margin_right = 109.5
margin_bottom = 167.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "This is a title screen"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -107.807
margin_top = 81.7719
margin_right = -3.80676
margin_bottom = 133.772
custom_colors/font_color = Color( 0.215686, 0.741176, 0.0862745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0
"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.215686, 0.741176, 0.0862745, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ReturnToTitleButton" to="." method="_on_ReturnToTitleButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
